# api/models/hosts.js
@@ -1,7 +1,11 @@
 'use strict';
 module.exports = (sequelize, DataTypes) => {
   const Hosts = sequelize.define('Hosts', {
+    usuario: DataTypes.STRING,
+    contrasena: DataTypes.STRING,
     nombre: DataTypes.STRING,
+    edad: DataTypes.STRING,
+    telefono: DataTypes.STRING,
     direccion: DataTypes.STRING
   }, {});
   Hosts.associate = function(models) {
