# api/models/usuarios.js
@@ -1,9 +1,11 @@
 'use strict';
 module.exports = (sequelize, DataTypes) => {
   const Usuarios = sequelize.define('Usuarios', {
+    usuario: DataTypes.STRING,
+    contrasena: DataTypes.STRING,
     nombre: DataTypes.STRING,
     edad: DataTypes.STRING,
-    genero: DataTypes.STRING
+    telefono: DataTypes.STRING
   }, {});
   Usuarios.associate = function(models) {
     // associations can be defined here
